positions whitespace fix

--- a/themes/caci/src/css/main.less
+++ b/themes/caci/src/css/main.less
@@ -618,7 +618,7 @@ input[type="submit"] {
         color: #111;
     }
     &.active {
-        right: 22.5%;
+        right: 21.9%;
     }
 }
 
@@ -833,7 +833,7 @@ input[type="submit"] {
         right: auto;
     }
     &.in-case {
-        width: 48%;
+        width: 50%;
     }
     .leaflet-top {
         top: 50px;
@@ -964,7 +964,7 @@ input[type="submit"] {
 #case.single {
     position: absolute;
     top: 50px;
-    right: 23%;
+    right: 22%;
     width: 100%;
     padding: 40px 0 40px 40px;
     z-index: 5;
